Fixes issue where feature text is unreadable with certain background images

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -496,8 +496,7 @@ footer .footer-profile {
 
 .widget.feature .feature-bgimg .content .spare {
 	&.wrapper {
-		background-color: darken(@color-swatch1, 90%);
-		opacity: 0.3;
+		background-color: fade(@color-swatch2, 50%);
 	}
 	text-align: center;
 	h2 {
